# open-batch-llm

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/open_batch_llm/: __init__.py  cli.py
tests/: test_cli.py
