[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-batch-llm"
version = "0.1.0"
description = "A CLI tool to manage batch LLM calls"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
open-batch-llm = "open_batch_llm.cli:main"

[project.urls]
Homepage = "https://github.com/dev-ankit/open-batch-llm"
Repository = "https://github.com/dev-ankit/open-batch-llm"
Issues = "https://github.com/dev-ankit/open-batch-llm/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/open_batch_llm"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
